INTERNSHIP-29: удаление стажировки
