# api/openapi.yml
@@ -147,6 +147,34 @@ paths:
       tags:
       - admin
   /admin/internships/{id}:
+    delete:
+      parameters:
+      - description: ID стажировки
+        in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "204":
+          description: No Content
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Not Found
+      security:
+      - Bearer: []
+      summary: Удалить стажировку
+      tags:
+      - admin
     get:
       parameters:
       - description: ID стажировки
